# lely-extensions

./: CMakeLists.txt  README.md  include-lely-core.cmake
LelyIntegration/: CMakeLists.txt
LelyIntegration/include/: DCFConfigMaster.h  DCFDriver.h  DCFDriverConfig.h  MotorDriver.h
LelyIntegration/src/: DCFConfigMaster.cpp  DCFDriver.cpp  DCFDriverConfig.cpp  MotorDriver.cpp
LelyTest/: CMakeLists.txt  demo.yml  demo_motor.eds  main.cpp  master.dcf  motor.dcf  motor_4.dcf
cmake/: include-lely-core.cmake
doc/: manual-PDO-mapping-example.md
patches/: 0001-Add-flag-to-determine-which-parameters-were-set-expl.patch
